[package]
name = "solana-test"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.22"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0.24"
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]


